Wed Jan  3 01:19:53 1996  Mark Immel <immel@centerline.com>
			  and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* update.c (checkout_file): Do not resurrect file on join if it
	doesn't contain the revisions we are joining.  Probably not a
	perfect test, but should be an improvement.
	* sanity.sh (death): New death-file4-* tests, for bug fixed above.

Wed Jan  3 01:19:53 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* add.c, admin.c, checkout.c, client.c, commit.c, diff.c, edit.c,
	history.c, import.c, log.c, patch.c, release.c, remove.c, rtag.c,
	status.c, tag.c, update.c, watch.c: In calling send_to_server,
	pass \012 not \n.  On the Mac \n is CR, not LF, and we want to
	send LF.  I didn't try to deal with whether files in CVSADM should
	contain CR or LF--in fact there is some code in client.c which
	reads \n from CVSADM files and passes it to send_to_server; it
	needs to be cleaned up one way or the other.

	* entries.c (Entries_Open): Don't try to close fpin twice.

	* client.c (update_entries): Fix typo ("strlen (filename + 10)"
	-> "strlen (filename) + 10").

	* commit.c (checkaddfile): Remove arbitrary limit.

Tue Jan  2 11:25:22 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* commit.c (commit): Only pass files which were modified, added,
	or removed to send_file_names.  This has as a side effect a
	semantic change--the up-to-date check is now skipped for other
	files--but probably a good one, or at least not a bad one.
	* sanity.sh (basica): New test; tests for bug fixed above.
	* sanity.sh (187a3): Adjust for new 'cvs commit' output.  Set up
	DOTSTAR to match arbitrary text (another GNU expr bug/misfeature,
	sigh).

	* sanity.sh: Test that the commit in test 43 actually worked.
	Merge tests basic2 and basic3 and make them independent of basic1.
	(pass,fail): Don't insert spurious space.
	(45.5): Fix typo in directory name.

Tue Jan  2 13:00:00 1996  Jim Kingdon  <kingdon@peary.cyclic.com>

	Visual C++ lint:
	* myndbm.c: Prototype write_item.
